--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -357,6 +357,10 @@
   padding-left: 1vw;
 }
 
+.opportunity-row-data-content {
+  text-transform: none !important;
+}
+
 .opportunity-volunteers-needed {
   color: $limegreen;
 }
