--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -21,12 +21,25 @@ html, body {
 
 }
 
+a {
+  text-transform: uppercase;
+  color: $midgrey;
+}
+
 h1, h2, h3, h4, h5 {
   letter-spacing: 2px;
 }
 
 h1 {
   text-transform: uppercase;
+}
+
+.form-inputs {
+
+  & select {
+    border: 1px solid $lightgrey;
+    font-size: 1.3rem;
+  }
 }
 
 .jbh-standard-title {
