--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -12,13 +12,57 @@
 }
 
 .trix-content {
-  width: 100%;
+  width: 90vw;
   height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid $lightgrey;
 }
 
 .trix-container {
   height: 50vh;
-  border: 2px solid $lightgrey;
+}
+
+
+.submit-post-container {
+  text-align: center;
+  margin-top: 5vh;
+  margin-bottom: 2vh;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60vw;
+
+  background-color: $limegreen-mid;
+  border: 1px solid $midgrey;
+}
+
+.post-options-container {
+  text-align: center;
+  font-size: 1.6rem;
+
+  @include respond-to(handhelds) {
+    font-size: 1.4rem;
+  }
+}
+
+
+.submit-post-btn {
+  font-size: 2rem !important;
+  font-weight: 600 !important;
+  width: 100%;
+  height: 100%;
+  text-transform: uppercase !important;
+  color: $darkgrey;
+
+  @include respond-to(handhelds) {
+    font-size: 1.6rem !important;
+  }
+}
+
+.no-comments-note {
+  margin-left: 5vw;
+  margin-right: 5vw;
+  margin-top: 2vh;
 }
 
 .original-post-content {
