--- a/app/assets/stylesheets/requirements.scss
+++ b/app/assets/stylesheets/requirements.scss
@@ -106,7 +106,7 @@
 
 
 .requirement-info-row {
-  font-size: 2em;
+  font-size: 1.3em;
   font-weight: 700;
   color: $darkgrey;
   margin-left: 5vw;
@@ -114,14 +114,19 @@
 
   @include respond-to(handhelds){
     margin-right: 5vw;
+    font-size: .9rem;
   }
 }
 
 .requirement-info-content {
-  font-size: 1em;
+  font-size: 1.5rem;
   font-weight: normal;
   color: black;
-  margin-left: 5vw;
+  margin-left: 2vw;
+
+  @include respond-to(handhelds) {
+    font-size: 1.2rem;
+  }
 }
 
 .requirement-meta {
@@ -205,7 +210,7 @@
   padding-right: 5vw;
   width: 100%;
   height: 2.4em;
-  display: inline-flex;  
+  display: inline-flex;
   justify-content: space-between;
   border-bottom: 1px solid $lightgrey;
   font-size: 1.7em;
