--- a/app/views/requirements/show.html.erb
+++ b/app/views/requirements/show.html.erb
@@ -131,9 +131,6 @@
 </div>
 <div id="requirement-posts-tab" class="tabcontent">
   <div class="posts-container">
-    <div class="tab-header d-flex align-items-center">
-      <h2 class="tab-heading posts-tab-heading"> Posts </h2>
-    </div>
     <div class="post-list">
       <% if @requirement.posts.size > 0 %>
         <% @requirement.posts.each do |post| %>
@@ -151,8 +148,8 @@
         </div>
       <% end %>
       <% if current_user && @is_follower %>
-        <div class="add-post-button">
-          <%= link_to 'New Post', new_post_path(:requirement => {:id => @requirement.id}), class: "btn btn-success btn-lg add-tabitem-btn" %>
+        <div class="submit-post-container">
+          <%= link_to 'New Post', new_post_path(:requirement => {:id => @requirement.id}), class: "submit-post-btn" %>
         </div>
       <% end %>
     </div>
@@ -160,9 +157,6 @@
 </div>
 <div id="requirement-volunteers-tab" class="tabcontent">
   <div class="volunteers-container">
-    <div class="tab-header d-flex align-items-center">
-      <h2 class="tab-heading posts-tab-heading"> Volunteers </h2>
-    </div>
     <div class="volunteers-list">
       <% if @volunteers.size > 0 %>
         <% @volunteers.each do |vol| %>
