some little tweaks to the landing page

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -123,6 +123,10 @@
 .start-volunteering-btn {
   width: 100%;
   height: 100%;
+
+  .jbh-btn-text {
+    text-transform: none !important;
+  }
 }
 
 
