--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -2,9 +2,9 @@
   <div class="landing-title">Welcome to</div>
   <%= image_tag("beta-logo.png", class: "landing-logo") %>
   <div class="landing-explanation">
-    <div class="landing-explanation-basic">Just Be Human is a platform where anyone can organize and give back to their community! If you have an idea for a way to improve your community in mind, create a geo-tagged <b>Opportunity</b> and give it a target completion date. Opportunities are broken down into individual tasks and responsibilities called <b>Requirements</b>. 
+    <div class="landing-explanation-basic">Just Be Human is a platform where anyone can organize and give back to their community! If you have an idea for a way to improve your community in mind, create a geo-tagged <b>Opportunity</b> and give it a target completion date. Opportunities are broken down into individual tasks and responsibilities called <b>Requirements</b>.
       <div class="landing-explanation-detail">
-        - If you know what's needed to complete the task, your Opportunity is <b>defined</b>. 
+        - If you know what's needed to complete the task, your Opportunity is <b>defined</b>.
       </div>
       <div class="landing-explanation-detail">
         - If you want to crowd-source the planning stages, it is <b>abstract</b>.
@@ -16,10 +16,12 @@
     </div>
   </div>
   <div class="landing-padding-middle"></div>
-  <div class="d-flex justify-content-center start-volunteering-container jbh-green-btn-container">
-    <a class="start-volunteering-btn" href="/users/sign_in" role="button">
-      <div class="jbh-btn-text">Let's start volunteering!</div>
-    </a>
+  <div class="landing-page-continue-btn">
+    <div class="submit-post-container">
+      <a class="submit-post-btn" href="/users/sign_in" role="button">
+        <div class="jbh-btn-text">Let's start volunteering!</div>
+      </a>
+    </div>
   </div>
   <div class="landing-padding-middle"></div>
   <div class="aboutus-community-guidelines">
