--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -14,6 +14,8 @@ $limegreen-mid: rgba(153,204,102,.6);
 $darkblue: #006699;
 $lightblue: #99ccff;
 $lightpink: #E9B1E0;
+$lightpink-low: rgba(233,177,224,.3);
+$lightpink-mid: rgba(233,177,224,.6);
 
 $lightgrey: #e0e0e0;
 $midgrey: #959CA0;
