some more oppo cleanup

--- a/app/assets/stylesheets/opportunities.scss
+++ b/app/assets/stylesheets/opportunities.scss
@@ -711,6 +711,11 @@
 }
 
 
+.oppo-edit-back-btn {
+  text-align: center;
+  font-size: 1.4rem;
+}
+
 .oppo-datetime-selection {
   #datetime-required {
     display: none;
