--- a/app/views/opportunities/_editform.html.erb
+++ b/app/views/opportunities/_editform.html.erb
@@ -33,6 +33,9 @@
             <%= f.label "How difficult do you expect the solution to be? (1 is easiest, 10 is hardest)" %>
             <%= f.select :estimated_work, [1,2,3,4,5,6,7,8,9,10] %>
           </div>
+          <div class="volunteers-required-input">
+            <%= f.input :volunteers_required %>
+          </div>
           <div class="plan-by-selection">
             <%= f.label "If you would like, you can set a date you want to have your Opportunity defined by." %>
             <%= f.input :planned_by_date, order: [:month, :day, :year], id: "planned-by-date" %>
@@ -50,9 +53,8 @@
         <%= f.input :address, placeholder: "If possible, please enter a specific location; an address, intersection, or public place is perfect!" %>
       </div>
     </div>
-    <h5 class="completion-date-subheader">When do you want to complete it?</h5>
   </div>
-  <div class="submit-opportunity">
-    <%= f.button :submit, class: 'btn btn-success btn-lg btn-block submit-opportunity-btn'%>
+  <div class="submit-post-container">
+    <%= f.button :submit, "Update", class: 'submit-post-btn'%>
   </div>
 <% end %>
