--- a/app/views/opportunities/edit.html.erb
+++ b/app/views/opportunities/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>Editing Opportunity</h1>
+<div class="jbh-standard-title">Editing Opportunity</div>
 <%= render 'editform', opportunity: @opportunity %>
-<%= link_to 'Show', @opportunity %> |
-<%= link_to 'Back', opportunities_path %>
+<div class="oppo-edit-back-btn">
+  <%= link_to 'Back', @opportunity %>
+</div>
